--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/reset.css">
     <link rel="stylesheet" href="estilos/normalize.css">
+    <link rel="stylesheet" href="estilos/encabezado.css">
+    <script src="https://kit.fontawesome.com/dfcb78d48d.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <!--encabezado-->
+    <header class="encabezado">
+        <div class="encabezado__img__busqueda"><img src="img/Logo.png" alt="Logo" class="encabezado__img"><input type="text" class="encabezado__busqueda" placeholder="¿Que deseas Buscar?"><i class="fa-solid fa-magnifying-glass"></i></div>
+        <div class="encabezado__login"><a href="#" class="encabezado__btnLogin">Login</a></div>
+    </header>
 </body>
 </html>
