--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/reset.css">
     <link rel="stylesheet" href="estilos/normalize.css">
+    <link rel="stylesheet" href="estilos/reset.css">
     <link rel="stylesheet" href="estilos/encabezado.css">
+    <link rel="stylesheet" href="estilos/banner.css">
     <script src="https://kit.fontawesome.com/dfcb78d48d.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
@@ -16,5 +17,12 @@
         <div class="encabezado__img__busqueda"><img src="img/Logo.png" alt="Logo" class="encabezado__img"><input type="text" class="encabezado__busqueda" placeholder="¿Que deseas Buscar?"><i class="fa-solid fa-magnifying-glass"></i></div>
         <div class="encabezado__login"><a href="#" class="encabezado__btnLogin">Login</a></div>
     </header>
+    <section class="banner">
+        <div class="banner__img">
+            <h1 class="banner__titulo">Febrero Promocional</h1>
+            <p class="banner__paragrph">Productos seleccionados con 33% de descuento</p>
+            <a href="" class="banner__btn">Ver Consolas</a>
+        </div>
+    </section>
 </body>
 </html>
