ajustes realizados al banner y a los titulos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,18 +12,25 @@
     <script src="https://kit.fontawesome.com/dfcb78d48d.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
+
 <body>
     <!--encabezado-->
     <header class="encabezado">
-        <div class="encabezado__img__busqueda"><img src="img/Logo.png" alt="Logo" class="encabezado__img"><input type="text" class="encabezado__busqueda" placeholder="¿Que deseas Buscar?"><i class="fa-solid fa-magnifying-glass"></i></div>
+        <div class="encabezado__img__busqueda"><img src="img/Logo.png" alt="Logo" class="encabezado__img"><input
+                type="text" class="encabezado__busqueda" placeholder="¿Que deseas Buscar?"><i
+                class="fa-solid fa-magnifying-glass"></i></div>
         <div class="encabezado__login"><a href="#" class="encabezado__btnLogin">Login</a></div>
     </header>
     <section class="banner">
         <div class="banner__img">
-            <h1 class="banner__titulo">Febrero Promocional</h1>
-            <p class="banner__paragrph">Productos seleccionados con 33% de descuento</p>
-            <a href="" class="banner__btn">Ver Consolas</a>
+            <div class="banner__info">
+                <h1 class="banner__titulo">Febrero Promocional</h1>
+                <p class="banner__paragrph">Productos seleccionados con 33% de descuento</p>
+                <a href="" class="banner__btn">Ver Consolas</a>
+            </div>
+
         </div>
     </section>
 </body>
+
 </html>
