--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Poppins:wght@300;500&family=Raleway:wght@700&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Poppins:wght@300;500&family=Raleway:wght@400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="estilos/normalize.css">
     <link rel="stylesheet" href="estilos/reset.css">
     <link rel="stylesheet" href="estilos/encabezado.css">
@@ -16,10 +22,12 @@
 <body>
     <!--encabezado-->
     <header class="encabezado">
-        <div class="encabezado__img__busqueda"><img src="img/Logo.png" alt="Logo" class="encabezado__img"><input
-                type="text" class="encabezado__busqueda" placeholder="¿Que deseas Buscar?"><i
-                class="fa-solid fa-magnifying-glass"></i></div>
-        <div class="encabezado__login"><a href="#" class="encabezado__btnLogin">Login</a></div>
+        <div class="encabezado__container">
+            <div class="encabezado__img__busqueda"><img src="img/Logo.png" alt="Logo" class="encabezado__img"><input
+                    type="text" class="encabezado__busqueda" placeholder="¿Que deseas Buscar?"><i
+                    class="fa-solid fa-magnifying-glass"></i></div>
+            <div class="encabezado__login"><a href="#" class="encabezado__btnLogin">Login</a></div>
+        </div>
     </header>
     <section class="banner">
         <div class="banner__img">
