creando la seccion 1

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="estilos/reset.css">
     <link rel="stylesheet" href="estilos/encabezado.css">
     <link rel="stylesheet" href="estilos/banner.css">
+    <link rel="stylesheet" href="estilos/section1.css">
     <script src="https://kit.fontawesome.com/dfcb78d48d.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
@@ -36,7 +37,55 @@
                 <p class="banner__paragrph">Productos seleccionados con 33% de descuento</p>
                 <a href="" class="banner__btn">Ver Consolas</a>
             </div>
-
+        </div>
+    </section>
+    <section class="section1">
+        <div class="section1__container">
+            <div class="section1__cabecera">
+                <h2 class="section1__titulo">Star Wars</h2>
+                <div class="section1__link"> 
+                    <a href="" class="section1__a">Ver todo</a>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </div>
+            </div>
+            <ul class="section1__list">
+                <li class="section1__item">
+                    <div class="section1__img"></div>
+                    <h3 class="section1__description">Producto XYZ</h3>
+                    <h3 class="section1__price">$ 60,00</h3>
+                    <a href="" class="section1__link">Ver Producto</a>
+                </li>
+                <li class="section1__item">
+                    <div class="section1__img"></div>
+                    <h3 class="section1__description">Producto XYZ</h3>
+                    <h3 class="section1__price">$ 60,00</h3>
+                    <a href="" class="section1__link">Ver Producto</a>
+                </li>
+                <li class="section1__item">
+                    <div class="section1__img"></div>
+                    <h3 class="section1__description">Producto XYZ</h3>
+                    <h3 class="section1__price">60,00</h3>
+                    <a href="" class="section1__link">Ver Producto</a>
+                </li>
+                <li class="section1__item">
+                    <div class="section1__img"></div>
+                    <h3 class="section1__description">Producto XYZ</h3>
+                    <h3 class="section1__price">60,00</h3>
+                    <a href="" class="section1__link">Ver Producto</a>
+                </li>
+                <li class="section1__item">
+                    <div class="section1__img"></div>
+                    <h3 class="section1__description">Producto XYZ</h3>
+                    <h3 class="section1__price">60,00</h3>
+                    <a href="" class="section1__link">Ver Producto</a>
+                </li>
+                <li class="section1__item">
+                    <div class="section1__img"></div>
+                    <h3 class="section1__description">Producto XYZ</h3>
+                    <h3 class="section1__price">60,00</h3>
+                    <a href="" class="section1__link">Ver Producto</a>
+                </li>
+            </ul>
         </div>
     </section>
 </body>
