Creando Section 2 y Diversos

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="estilos/encabezado.css">
     <link rel="stylesheet" href="estilos/banner.css">
     <link rel="stylesheet" href="estilos/section1.css">
+    <link rel="stylesheet" href="estilos/section2.css">
+    <link rel="stylesheet" href="estilos/diversos.css">
     <script src="https://kit.fontawesome.com/dfcb78d48d.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
@@ -84,6 +86,104 @@
                     <h3 class="section1__description">Producto XYZ</h3>
                     <h3 class="section1__price">60,00</h3>
                     <a href="" class="section1__link">Ver Producto</a>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="section2">
+        <div class="section2__container">
+            <div class="section2__cabecera">
+                <h2 class="section2__titulo">Consolas</h2>
+                <div class="section2__link"> 
+                    <a href="" class="section2__a">Ver todo</a>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </div>
+            </div>
+            <ul class="section2__list">
+                <li class="section2__item">
+                    <div class="section2__img"></div>
+                    <h3 class="section2__description">Control XYZ</h3>
+                    <h3 class="section2__price">$ 60,00</h3>
+                    <a href="" class="section2__link">Ver Producto</a>
+                </li>
+                <li class="section2__item">
+                    <div class="section2__img"></div>
+                    <h3 class="section2__description">Control y consola XYZ</h3>
+                    <h3 class="section2__price">$ 60,00</h3>
+                    <a href="" class="section2__link">Ver Producto</a>
+                </li>
+                <li class="section2__item">
+                    <div class="section2__img"></div>
+                    <h3 class="section2__description">Consola XYZ</h3>
+                    <h3 class="section2__price">60,00</h3>
+                    <a href="" class="section2__link">Ver Producto</a>
+                </li>
+                <li class="section2__item">
+                    <div class="section2__img"></div>
+                    <h3 class="section2__description">Control XYZ</h3>
+                    <h3 class="section2__price">60,00</h3>
+                    <a href="" class="section2__link">Ver Producto</a>
+                </li>
+                <li class="section2__item">
+                    <div class="section2__img"></div>
+                    <h3 class="section2__description">Consola XYZ</h3>
+                    <h3 class="section2__price">60,00</h3>
+                    <a href="" class="section2__link">Ver Producto</a>
+                </li>
+                <li class="section2__item">
+                    <div class="section2__img"></div>
+                    <h3 class="section2__description">Game Boy Color</h3>
+                    <h3 class="section2__price">60,00</h3>
+                    <a href="" class="section2__link">Ver Producto</a>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="diversos">
+        <div class="diversos__container">
+            <div class="diversos__cabecera">
+                <h2 class="diversos__titulo">Diversos</h2>
+                <div class="diversos__link"> 
+                    <a href="" class="diversos__a">Ver todo</a>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </div>
+            </div>
+            <ul class="diversos__list">
+                <li class="diversos__item">
+                    <div class="diversos__img"></div>
+                    <h3 class="diversos__description">Camisa Atari</h3>
+                    <h3 class="diversos__price">$ 60,00</h3>
+                    <a href="" class="diversos__link">Ver Producto</a>
+                </li>
+                <li class="diversos__item">
+                    <div class="diversos__img"></div>
+                    <h3 class="diversos__description">Camisa SNES</h3>
+                    <h3 class="diversos__price">$ 60,00</h3>
+                    <a href="" class="diversos__link">Ver Producto</a>
+                </li>
+                <li class="diversos__item">
+                    <div class="diversos__img"></div>
+                    <h3 class="diversos__description">Control y consola XYZ</h3>
+                    <h3 class="diversos__price">60,00</h3>
+                    <a href="" class="diversos__link">Ver Producto</a>
+                </li>
+                <li class="diversos__item">
+                    <div class="diversos__img"></div>
+                    <h3 class="diversos__description">Control y consola XYZ</h3>
+                    <h3 class="diversos__price">60,00</h3>
+                    <a href="" class="diversos__link">Ver Producto</a>
+                </li>
+                <li class="diversos__item">
+                    <div class="diversos__img"></div>
+                    <h3 class="diversos__description">Control y consola XYZ</h3>
+                    <h3 class="diversos__price">60,00</h3>
+                    <a href="" class="diversos__link">Ver Producto</a>
+                </li>
+                <li class="diversos__item">
+                    <div class="diversos__img"></div>
+                    <h3 class="diversos__description">Producto XYZ</h3>
+                    <h3 class="diversos__price">60,00</h3>
+                    <a href="" class="diversos__link">Ver Producto</a>
                 </li>
             </ul>
         </div>
