Agregando el rodapie y el footer

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="estilos/section1.css">
     <link rel="stylesheet" href="estilos/section2.css">
     <link rel="stylesheet" href="estilos/diversos.css">
+    <link rel="stylesheet" href="estilos/rodapie.css">
+    <link rel="stylesheet" href="estilos/footer.css">
     <script src="https://kit.fontawesome.com/dfcb78d48d.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
@@ -188,6 +190,36 @@
             </ul>
         </div>
     </section>
+    <section class="rodapie">
+        <div class="rodapie__container">
+            <ul class="rodapie__list">
+                <li class="rodapie__item">
+                    <img class="rodapie__img" src="/img/Logo.png" alt="Logo">
+                </li>
+                <li class="rodapie__item">
+                    <a href="#" class="rodapie__link">Quienes somos</a>
+                    <a href="#" class="rodapie__link">Política de privacidad</a>
+                    <a href="#" class="rodapie__link">Programa de fidelidad</a>
+                    <a href="#" class="rodapie__link">Nuestras Tiendas</a>
+                    <a href="#" class="rodapie__link">Quiero ser franquiciado</a>
+                    <a href="#" class="rodapie__link">Anúncie aquí</a>
+                </li>
+                <li class="rodapie__item">
+                    <form class="rodapie__form" action="#">
+                        <label class="rodapie__LabelName" for="nombre">Hable con nosotros</label>
+                        <label class="rodapie__LabelPlaceHolderName" for="nombre">Nombre</label>
+                        <input name="nombre" class="rodapie__inputName" type="text" placeholder="Nombre">
+                        <input type="text" name="msg" class="rodapie__inputMsg" placeholder="Escribe tu mensaje">
+                        <a class="rodapie__btn" href="#">Enviar mensaje</a>
+                    </form>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <footer class="footer">
+        <p class="footer__1">Desarrollado por Gabriel M. Gomez Parada</p>
+        <p class="footer__2">2022</p>
+    </footer>
 </body>
 
 </html>
