corrigiendo ruta de la imagen del rodapie

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="rodapie__container">
             <ul class="rodapie__list">
                 <li class="rodapie__item">
-                    <img class="rodapie__img" src="/img/Logo.png" alt="Logo">
+                    <img class="rodapie__img" src="img/Logo.png" alt="Logo">
                 </li>
                 <li class="rodapie__item">
                     <a href="#" class="rodapie__link">Quienes somos</a>
