Agregando el slider de productos

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="estilos/diversos.css">
     <link rel="stylesheet" href="estilos/rodapie.css">
     <link rel="stylesheet" href="estilos/footer.css">
+    <link rel="stylesheet" href="estilos/slider.css">
     <link rel="stylesheet" href="estilos/responsive.css">
     <script src="https://kit.fontawesome.com/dfcb78d48d.js" crossorigin="anonymous"></script>
     <title>Document</title>
@@ -221,6 +222,59 @@
         <p class="footer__1">Desarrollado por Gabriel M. Gomez Parada</p>
         <p class="footer__2">2022</p>
     </footer>
+    <section class="slider">
+        <div class="slider__cabecera">
+            <div class="slider__img"></div>
+            <div class="slider__datos">
+                <h2 class="slider__titulo">Producto XYZ</h2>
+                <h3 class="slider__price">$ 60,00</h3>
+                <p class="slider__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit unde totam accusamus blanditiis, natus qui excepturi, fuga quas possimus voluptatibus cum deleniti pariatur nobis voluptatum ducimus, ad reiciendis porro officiis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus molestiae, laborum vero odio nostrum eius ipsum consectetur maxime magni quisquam ratione laboriosam excepturi, ea, non accusamus obcaecati labore. Earum, nihil!</p>
+            </div>
+        </div>
+        <div class="slider__footer">
+            <div class="slider__footer__container">
+                <h2 class="slider__footer__titulo">Productos similares</h2>
+                <ul class="slider__list">
+                    <li class="slider__ul__item">
+                        <div class="slider__ul__img"></div>
+                        <h2 class="slider__ul__titulo">Control xyz</h2>
+                        <h3 class="slider__ul__price">$ 60,00</h3>
+                        <a href="" class="slider__ul__link">Ver producto</a>
+                    </li>
+                    <li class="slider__ul__item">
+                        <div class="slider__ul__img"></div>
+                        <h2 class="slider__ul__titulo">Producto XYZ</h2>
+                        <h3 class="slider__ul__price">$ 60,00</h3>
+                        <a href="" class="slider__ul__link">Ver producto</a>
+                    </li>
+                    <li class="slider__ul__item">
+                        <div class="slider__ul__img"></div>
+                        <h2 class="slider__ul__titulo">Producto XYZ</h2>
+                        <h3 class="slider__ul__price">$ 60,00</h3>
+                        <a href="" class="slider__ul__link">Ver producto</a>
+                    </li>
+                    <li class="slider__ul__item">
+                        <div class="slider__ul__img"></div>
+                        <h2 class="slider__ul__titulo">Producto XYZ</h2>
+                        <h3 class="slider__ul__price">$ 60,00</h3>
+                        <a href="" class="slider__ul__link">Ver producto</a>
+                    </li>
+                    <li class="slider__ul__item">
+                        <div class="slider__ul__img"></div>
+                        <h2 class="slider__ul__titulo">Producto XYZ</h2>
+                        <h3 class="slider__ul__price">$ 60,00</h3>
+                        <a href="" class="slider__ul__link">Ver producto</a>
+                    </li>
+                    <li class="slider__ul__item">
+                        <div class="slider__ul__img"></div>
+                        <h2 class="slider__ul__titulo">Producto XYZ</h2>
+                        <h3 class="slider__ul__price">$ 60,00</h3>
+                        <a href="" class="slider__ul__link">Ver producto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
